# GSI-Protocol

./: .gitignore  .gitignore.example  CHANGELOG_COPILOT.md  CODEX_SUPPORT_CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  INSTALL.md  INSTALLER_README.md  MANIFEST.in  QUICKSTART.md  README.md  README.zh-TW.md  gsi_installer.py  install.sh  pyproject.toml
.claude/agents/: architect-designer.md  bdd-test-engineer.md  implementation-engineer.md  pm-spec-writer.md  qa-verifier.md  sdd-orchestrator.md
.claude/commands/: README.md  sdd-arch.md  sdd-auto.md  sdd-bds.md  sdd-impl.md  sdd-spec.md  sdd-verify.md  sdd.md
.codex/prompts/: README.md  sdd-arch.md  sdd-auto.md  sdd-impl.md  sdd-integration-test.md  sdd-spec.md  sdd-verify.md
.copilot/: README.md  settings.local.json
.copilot/commands/: sdd-arch.md  sdd-impl.md  sdd-integration-test.md  sdd-verify.md
.github/prompts/: README.md  README.prompt.md  sdd-auto.prompt.md  sdd-integration-test.prompt.md  sdd-spec.prompts.md
.github/workflows/: publish-to-pypi.yml
docs/: COMMANDS.md  GETTING_STARTED.md  INDEX.md  INSTALL.md  LANGUAGE_GUIDE.md  PLATFORM_SUPPORT.md  PYTHON_INSTALLER.md  QUICKSTART.md  SUB_AGENTS.md  expected_workflow.md  gsi-theory.md  gsi-theory.zh-TW.md  quickstart.zh-TW.md
examples/referral_bonus/: README.md  implementation.py  spec.feature  structure.py
examples/vip_discount_typescript/: README.md  implementation.ts  package.json  spec.feature  (+1 more)
prompts/: architect_agent.md  engineer_agent.md  pm_agent.md  qa_agent.md
scripts/: README.md  README.zh-TW.md  dev_sync.py  sync_commands.py
(+9 files in other folders)
